Update: Fixed word wrapping for smaller screens

--- a/exampleSite/public/css/main.css
+++ b/exampleSite/public/css/main.css
@@ -65,6 +65,7 @@ table {
 }
 
 table, th, td {
+  word-break: break-all;
   border: 1px solid #fbfff9;
 }
 
@@ -81,7 +82,6 @@ th, td {
 }
 
 .container {
-  word-break: break-all;
   display: flex;
   margin: 10px auto;
   max-width: 1200px; 
@@ -109,7 +109,7 @@ th, td {
 
 .content {
   background-color: rgb(32, 32, 32);
-  flex: 2;
+  flex: 3.5;
   float: left;
   width: 70%;
   padding: 25px;
@@ -127,6 +127,11 @@ th, td {
   width: 30%;
   max-width: auto;
   max-height: auto;
+}
+
+.copyright {
+  margin-left: 15px;
+  margin-top: -5px;
 }
 
 .tag-list {
@@ -231,6 +236,7 @@ ul.sidebar-link li {
   
   .container {
     flex-direction: column;
+    margin: auto;
   }
 
   .sidebar, .content {
@@ -248,15 +254,19 @@ ul.sidebar-link li {
     margin-right: 0;
     padding: 10px;
   }
+
+  .sidebar, .copyright, .post-content, .post-title, .post-time {
+    font-size: small;
+  }
   
   .code-wrapper {
     height: auto;
     width: 90vw;
+    margin: auto;
     max-width: 100%;
     max-height: 100%;
     overflow-x: auto;
     overflow-y: auto;
-    padding: 0;
     margin: 0;
   }
 }
